# cool-compiler

./: .gitignore  CMakeLists.txt  README.md  build.sh  test.sh
assignments/PA1/: Makefile  actual.txt  stack.cl  stack.test
assignments/PA2/: CMakeLists.txt  main.cpp
assignments/PA3/: CMakeLists.txt  main.cpp
assignments/PA4/: CMakeLists.txt  main.cpp
assignments/PA4/tests/: cyclic_inheritance.test  test_11.test  test_case_type_selftype.test
assignments/PA5/: CMakeLists.txt  main.cpp
assignments/PA5/tests/: nested-arith.cl  nested-arith.cl.out
include/PA2/: Lexer.h  Token.h  Utils.h
include/PA3/: ASTVisitor.h  Nodes.h  Parser.h  PrintVisitor.h
include/PA4/: ClassTable.h  MethodEnvironment.h  ObjectEnvironment.h  SemanticAnalyzer.h  TypeEnvironment.h
include/PA5/: AsmModule.h  Const.h  Context.h  CoolBackend.h  MIPS.h  Names.h  Registers.h  Tables.h
lib/: trap.handler
src/PA2/: CMakeLists.txt  Lexer.cpp  Token.cpp  main.cpp
src/PA3/: CMakeLists.txt  Parser.cpp  main.cpp
src/PA4/: CMakeLists.txt  SemanticAnalyzer.cpp  main.cpp
src/PA5/: AsmModule.cpp  CMakeLists.txt  CoolBackend.cpp  main.cpp
